# Intelligent-Wheelchair-Platform

./: README.md
IROS scripts/: CNN-compare.py  (+42 more)
Wheelchair_SARA/: CMakeLists.txt  Readme.md
Wheelchair_SARA/Old_yaml/: base_local_planner_params.yaml  base_local_planner_params_old.yaml  costmap_common_params.yaml  costmap_common_params_old.yaml  global_costmap_params.yaml  global_costmap_params_old.yaml  imp  local_costmap_params.yaml  local_costmap_params_old.yaml
Wheelchair_SARA/include/kangaroo_driver/: kangaroo_driver.hpp
Wheelchair_SARA/launch/: gmapping-tf-handler.launch  new_localization.launch  rtabmap-tf-handler.launch  wheelchair_motion.launch  wheelchair_rtabmap_localization.launch  wheelchair_rtabmap_mapping.launch  wheelchair_rtabmap_navigation.launch
Wheelchair_SARA/launch/config/: rgbd_wheelchair.rviz  wheelchair_rtabmap_localization_visualizer.rviz
Wheelchair_SARA/python_jupyter_files/: SARA.ipynb  SARA.py  SARA_audiofile_saver.ipynb  text_speech_demo.ipynb
Wheelchair_SARA/scripts/: wheelchair_motion.sh
Wheelchair_SARA/src/: SARA_v2.py  base_controller.py  cmdvel_to_jointTraj.py  kangaroo_to_diff_translator.py  laser_field_limiter.py  movebase_goal.py  odometry_tf_publisher.py
Wheelchair_SARA/src/driver_files/: kangaroo_driver.cpp  kangaroo_driver_node.cpp
Wheelchair_SARA/src/speech/: listener.py
Wheelchair_SARA/src/tf_nodes/: kinect2_orientation_tf.py  laser_link.py  robot_tf_publisher.py
Wheelchair_SARA/yaml/: Indigo  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
(+24 files in other folders)
